objects/AR_test__c.object
<CustomObject>
    <fields>
        <fullName>AR_test_fied_1__c</fullName>
        <label>AR_test fied 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Picklist_Multi_Select__c</fullName>
        <label>Picklist (Multi-Select)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>65</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>contact__c</fullName>
        <label>contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>date__c</fullName>
        <label>date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>location__c</fullName>
        <label>location</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>number__c</fullName>
        <label>number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>percent_details__c</fullName>
        <label>percent details</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>stamp_1__c</fullName>
        <label>stamp 1</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>time__c</fullName>
        <label>date &amp; time</label>
        <type>DateTime</type>
    </fields>
    <label>AR_test</label>
    <nameField>
        <label>AR_test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR_tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>